--- a/CommunicationService/CommunicationServiceApiFramework/CommunicationServiceApiFramework.csproj
+++ b/CommunicationService/CommunicationServiceApiFramework/CommunicationServiceApiFramework.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\CommunicationServiceAbstraction\CommunicationServiceAbstraction.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
