--- a/CommunicationService/Sample/SampleClientMicroService/appsettings.json
+++ b/CommunicationService/Sample/SampleClientMicroService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "services": {
+    "UMS": "http://localhost:8090/",
+    "ID": "path"
+  }
 }
