--- a/CommunicationService/CommunicationServiceApiFramework/CommunicationServiceApiFramework.csproj
+++ b/CommunicationService/CommunicationServiceApiFramework/CommunicationServiceApiFramework.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
