--- a/CommunicationService/CommunicationServiceApiFramework/CommunicationServiceApiFramework.csproj
+++ b/CommunicationService/CommunicationServiceApiFramework/CommunicationServiceApiFramework.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<!--//https://docs.microsoft.com/en-us/aspnet/core/fundamentals/target-aspnetcore?view=aspnetcore-6.0&tabs=visual-studio-->
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
@@ -20,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="ServiceHosting\" />
   </ItemGroup>
 
 </Project>
