--- a/CommunicationService/Sample/SampleApiGateway/SampleApiGateway.csproj
+++ b/CommunicationService/Sample/SampleApiGateway/SampleApiGateway.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\CommunicationServiceAbstraction\CommunicationServiceAbstraction.csproj" />
+    <ProjectReference Include="..\..\CommunicationServiceApiFramework\CommunicationServiceApiFramework.csproj" />
+  </ItemGroup>
+
 </Project>
